# fava-portfolio-summary

./: pyproject.toml
fava_portfolio_summary/: __init__.py  irr.py
