[tool.poetry]
name = "fava_portfolio_summary"
version = "0.1.dev19+ga4aa004"
description = "Fava extension to display portfolio summaries including MWRR and TWRR"
license = "MIT"
keywords = ["fava", "beancount", "accounting", "investment", "mwrr", "mwr", "twrr", "twr", "irr"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Financial and Insurance Industry", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.7", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Office/Business :: Financial :: Accounting", "Topic :: Office/Business :: Financial :: Investment"]
homepage = "https://github.com/PhracturedBlue/fava-portfolio-summary"
authors = ["PhracturedBlue <rc2012@pblue.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
beancount = ">=2.3.5"
fava = ">=1.22.3"
packaging = "^21.3"
scipy = "^1.9.0"
importlib-metadata = "^4.12.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"